terraform/polices/disallow-default-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
  annotations:
    cis-benchmark: "4.6.3"
spec:
  validationFailureAction: Enforce
  rules:
  - name: validate-namespace
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Using 'default' namespace is not allowed (CIS 4.6.3)"
      pattern:
        metadata:
          namespace: "!default"
