terraform/polices/restrict-automount-sa-token.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-automount-sa-token
  annotations:
    policies.kyverno.io/title: Restrict Automount Service Account Token
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    cis-benchmark: "4.1.6"
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: validate-automount-sa-token
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kube-public
          - kube-node-lease
          - kyverno
          - calico-system
          - security
    validate:
      message: "SA tokens should not be auto-mounted (CIS 4.1.6)"
      pattern:
        spec:
          =(automountServiceAccountToken): false
